--- a/anshuman.html
+++ b/anshuman.html
@@ -14,7 +14,7 @@
         <a href="index.html" class="nav-logo-img">
             <img src="image/shivShenaLogo.png" alt="logo">
         </a>
-        <span class="shivsena-text">शिवसेना India</span>
+        <a class="shivsena-text">शिवसेना India</a>
         <div class="topnav">
             <a href="index.html">Home</a>
             <a href="#Our">Our M.Ps</a>
@@ -35,20 +35,41 @@
                     <h1>Anshumman Joshi Ji</h1>
                 </div>
             </div>
-            <p class="image-p">Anshumman Joshi Ji is an Trustee, 108 Ft.Sankat Mochan Dham, Jhandewala, Karol Bagh with absolute dedication towards all of religious programs and organizes a number of religious major events at the Hanuman Ji Temple.
+            <p class="image-p">Anshumman Joshi Ji is an Trustee, 108 Ft.Sankat Mochan Dham, Jhandewala, Karol Bagh with
+                absolute dedication towards all of religious programs and organizes a number of religious major events
+                at the Hanuman Ji Temple.
             </p>
             <img src="image/anshumman.jpg" id="titlebox" alt="">
             <h1>Profession : Business</h1>
-            <p>Philanthropist, Entrepreneur, Social Worker, RTI Activist, Corporate Head Honcho, Private Equity Investor, Banker, Cooperator, Rights Activist, Litigant to protect the integrity of Democracy in the Cooperative Sector also a Policy Framework Designer for the Growth of the Sector, a Savior for the Cooperative Banking Sector for Urban Cooperative Banks Across the Country, Policymaker, Financial Budget Strategist, Brainstormer for Development of the Country
+            <p>Philanthropist, Entrepreneur, Social Worker, RTI Activist, Corporate Head Honcho, Private Equity
+                Investor, Banker, Cooperator, Rights Activist, Litigant to protect the integrity of Democracy in the
+                Cooperative Sector also a Policy Framework Designer for the Growth of the Sector, a Savior for the
+                Cooperative Banking Sector for Urban Cooperative Banks Across the Country, Policymaker, Financial Budget
+                Strategist, Brainstormer for Development of the Country
             </p>
             <h1>Social and Cultural Activities</h1>
-            <p>Literary, Artistic and Scientific Founder, Dhanvarsha Group A Business Group focused on Saving the Cooperative Movement, Urban Cooperative Banks across the country are given free legal support to save the existence of the movement, Infusion of Capital into weak banks as per Section 12 of the Banking Regulations Amendment Act.2020 by way of Private Placement. Fought for the movement in various courts across
+            <p>Literary, Artistic and Scientific Founder, Dhanvarsha Group A Business Group focused on Saving the
+                Cooperative Movement, Urban Cooperative Banks across the country are given free legal support to save
+                the existence of the movement, Infusion of Capital into weak banks as per Section 12 of the Banking
+                Regulations Amendment Act.2020 by way of Private Placement. Fought for the movement in various courts
+                across
             </p>
             <h1>Accomplishments and other Special Interests</h1>
-            <p>The country to ensure the banks licenses are not cancelled & the same do not come under the directions of Section 35A of the Banking Regulations Act. 1949. Running Corruption Free India (NGO/Trust ) working towards the upliftment of the prisoners languishing prisons making them independent in skilled works like Tailoring signed MOUs with several Prisons to train the convicted prisoners while they are serving their sentence so that they are self rel iant once they are released after service their period in order to ensure they know how can they earn a living because of being trained as a toiler . Offering Food to the needy at Hanuman ji Temple, Jhandewalan, Karol Bagh & Various Gurudwaras across Delhi on a daily basis over a 1000 plus people are fed
+            <p>The country to ensure the banks licenses are not cancelled & the same do not come under the directions of
+                Section 35A of the Banking Regulations Act. 1949. Running Corruption Free India (NGO/Trust ) working
+                towards the upliftment of the prisoners languishing prisons making them independent in skilled works
+                like Tailoring signed MOUs with several Prisons to train the convicted prisoners while they are serving
+                their sentence so that they are self rel iant once they are released after service their period in order
+                to ensure they know how can they earn a living because of being trained as a toiler . Offering Food to
+                the needy at Hanuman ji Temple, Jhandewalan, Karol Bagh & Various Gurudwaras across Delhi on a daily
+                basis over a 1000 plus people are fed
             </p>
             <h1>Other Information</h1>
-            <p>Has undertaken initiatives in social engineering in order to promote harmony and unity in the country; organizing special meetings and programmes with the objective of providing guidance to several Urban Cooperative Banks & also help them become compliant to the regulatory norms. Working for the skill development in the country and has played an important role in the growth of the Urban Cooperative Banking Industry in India
+            <p>Has undertaken initiatives in social engineering in order to promote harmony and unity in the country;
+                organizing special meetings and programmes with the objective of providing guidance to several Urban
+                Cooperative Banks & also help them become compliant to the regulatory norms. Working for the skill
+                development in the country and has played an important role in the growth of the Urban Cooperative
+                Banking Industry in India
             </p>
         </div>
     </section>
@@ -84,12 +105,12 @@
                     <h3>Media Resource</h3>
                     <li><a class="column-text" href="">Press Releases</a></li>
                     <li><a class="column-text" href="">Photo Gallery</a></li>
-                    <li><a class="column-text"href="">Video Gallery</a></li>
-                </div> 
+                    <li><a class="column-text" href="">Video Gallery</a></li>
+                </div>
 
                 <div class="column">
                     <h3>Documents</h3>
-                    <li><a class="column-text" href="">Constitution</a></li>
+                    <li><a class="column-text" href="constitution.html">Constitution</a></li>
                 </div>
 
             </div>
