--- a/balasahebstory.html
+++ b/balasahebstory.html
@@ -14,7 +14,7 @@
         <a href="index.html" class="nav-logo-img">
             <img src="image/shivShenaLogo.png" alt="logo">
         </a>
-        <span class="shivsena-text">शिवसेना India</span>
+        <a class="shivsena-text">शिवसेना India</a>
         <div class="topnav">
             <a href="index.html">Home</a>
             <a href="#Our">Our M.Ps</a>
@@ -74,7 +74,7 @@
                 approach to politics, which included street activism, protests, and an aggressive style of politics.</p>
         </div>
     </section>
-    <br>    
+    <br>
     <!-- Footer  -->
     <footer>
         <div class="footer-container">
@@ -106,12 +106,12 @@
                     <h3>Media Resource</h3>
                     <li><a class="column-text" href="">Press Releases</a></li>
                     <li><a class="column-text" href="">Photo Gallery</a></li>
-                    <li><a class="column-text"href="">Video Gallery</a></li>
-                </div> 
+                    <li><a class="column-text" href="">Video Gallery</a></li>
+                </div>
 
                 <div class="column">
                     <h3>Documents</h3>
-                    <li><a class="column-text" href="">Constitution</a></li>
+                    <li><a class="column-text" href="constitution.html">Constitution</a></li>
                 </div>
 
             </div>
