--- a/constitution.html
+++ b/constitution.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shivsena</title>
     <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/story.css">
 </head>
 
 <body>
@@ -26,47 +25,16 @@
         </div>
     </nav>
     <!-- Navbar End -->
-    <br>
-    <section>
-        <div class="story-container">
-            <div class="story">
-                <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-                <div class="three">
-                    <h1>Rahul Ramesh Shewale Ji
-                    </h1>
-                </div>
-            </div>
-            <p class="image-p">Rahul Shewale is an active Indian politician from the Shiv Sena and the Lok Sabha member
-                from the Mumbai South Central constituency. He defeated sitting MP Eknath Gaikwad in the Indian general
-                election, 2014. Shewale is a four-time chairman of the standing committee of the Brihanmumbai Municipal
-                Corporation (BMC), the municipal corporation of the city of Mumbai. He held the position from 2010 to
-                2014.
-            </p>
-            <img src="image/rahulNew.jpg" id="titlebox" alt="">
-            <h1>Early & Personal Life
-            </h1>
-            <p>Rahul Shewale was born on 14 April 1973 to Ramesh Sambhaji Shewale, an Indian Navy officer and Jayashri
-                Shewale, an employee of MTNL. His elder brother Avinash is a software engineer, who has settled in the
-                United States, while his brother Navin is a doctor. He married fellow Shiv Sena politician and BMC
-                corporator Kamini Mayekar (Kamini Shewale) on 14 February 2005. Kamini Shewale is a housewife. The
-                couple have two sons: Swayam and Vedant. Shewale is a Diploma holder in Civil Engineering from
-                Government Polytechnic, Bandra
-            </p>
-            <h1>Career
-            </h1>
-            <p>Rahul Shewale is a two time MP. He holds the record for being elected the Chairman of the standing
-                committee of the BMC most times. Mr. Shewale joined Shiv Sena officially in 2014 when he decided to
-                contest the elections. Rahul Shewale has raised issues in Parliament concerning the renaming of Kings
-                Circle Station in Mumbai and Construction of a B.R Ambedkar Statue at Indu Mill in Mumbai. Rahul Shewale
-                is the first Shiv Sena MP in India and first MP in Maharashtra to get an ISO certification (ISO 9001)
-                for efficient and digital handling of grievance redressal was recently awarded with the ‘Best
-                Parliamentarian’ title. He presented several issues in the Parliament related to infrastructure and
-                environmental concerns.
 
-            </p>
+    <section>
+        <div class="Constitution">
+            <a target="_blank" href="constitution/constitution.pdf">
+            <img src="constitution/constitution.jpg" alt="">
+            </a>
+            <a class="gallery-button" href="constitution/constitution.pdf" download>Download</a>
         </div>
     </section>
-    <br>
+
     <!-- Footer  -->
     <footer>
         <div class="footer-container">
@@ -112,7 +80,6 @@
 
     </footer>
     <!-- Footer End -->
-
 
 </body>
 
