--- a/ananddighe.html
+++ b/ananddighe.html
@@ -14,7 +14,7 @@
         <a href="index.html" class="nav-logo-img">
             <img src="image/shivShenaLogo.png" alt="logo">
         </a>
-        <span class="shivsena-text">शिवसेना India</span>
+        <a class="shivsena-text">शिवसेना India</a>
         <div class="topnav">
             <a href="index.html">Home</a>
             <a href="#Our">Our M.Ps</a>
@@ -35,9 +35,52 @@
                     <h1>Anand Dighe Ji</h1>
                 </div>
             </div>
-            <p class="image-p">Anand Dighe ji, widely known as Guruvarya Dharmaveer Anand Dighe Saheb, was a renowned Indian politician who was born on 27 January 1951 at Tembhi Naka in Thane. As he matured, the Shivsena party began to rise and fight for the rights of Marathi people in Maharashtra, particularly in Mumbai and Thane. Dighe ji was a pivotal figure in the partys early years and played a significant role in shaping its ideology and principles. This blog post aims to shed light on the life and achievements of Anand Dighe, a true pioneer in the world of Indian politics. Anand Dighe was a prominent figure in Maharashtra politics who dedicated his life to the principles of Marathi Nationalism and Hindutva. Born into a typical Marathi family, he grew up in a rural environment where his parents worked as either farmers or in jobs. However, a chance encounter with Shivsena leader Balasaheb Thackeray at a young age sparked an interest in politics within him.</p>
+            <p class="image-p">Anand Dighe ji, widely known as Guruvarya Dharmaveer Anand Dighe Saheb, was a renowned
+                Indian politician who was born on 27 January 1951 at Tembhi Naka in Thane. As he matured, the Shivsena
+                party began to rise and fight for the rights of Marathi people in Maharashtra, particularly in Mumbai
+                and Thane. Dighe ji was a pivotal figure in the partys early years and played a significant role in
+                shaping its ideology and principles. This blog post aims to shed light on the life and achievements of
+                Anand Dighe, a true pioneer in the world of Indian politics. Anand Dighe was a prominent figure in
+                Maharashtra politics who dedicated his life to the principles of Marathi Nationalism and Hindutva. Born
+                into a typical Marathi family, he grew up in a rural environment where his parents worked as either
+                farmers or in jobs. However, a chance encounter with Shivsena leader Balasaheb Thackeray at a young age
+                sparked an interest in politics within him.</p>
             <img src="image/anandDigheNew.jpg" id="titlebox" alt="">
-            <p>Dighe remained an ardent follower of Chhatrapati Shivaji Maharaj and these ideologies throughout his life. In the 1970s, Anand Dighe started working for Shivsena at the age of just 18. Despite his young age, he worked tirelessly for the welfare of the people, which quickly caught the attention of Sena leaders. Known for his discipline and prime time management skills, Anand was involved in many of the partys Andolan and fought for Marathi manus. He steadily rose through the ranks and eventually became the district chief, a position he held for over two decades. Despite his significant contributions, Anand was never one to take credit or give speeches. This article will delve deeper into the life and legacy of Anand Dighe - a true pioneer in the building of the Shivsena-BJP alliance. Anand Dighe was a renowned figure in Thane, known for his problem-solving skills and dedication to helping people. He gained fame through his ability to solve issues on the spot and create satisfaction among those he assisted. His efforts were especially impactful for the Marathi community, as he helped many young people access education and employment opportunities. Additionally, he was a proponent of Marathi language and literature, organizing festivals and supporting related cultural events. With his strong stance on Hinduism and increasing renown, he has been compared to political figures such as the late Bal Thackeray and referred to as the Shivsenapramukh of Thane district. Anand Dighe was a powerful political figure who made a name for himself in the Thane area of India. Despite not holding any official political posts, Dighe had a reputation that extended far beyond his local constituency. His charismatic personality helped him build a strong grassroots base for the Shivsena party in Thane, Palghar, Navi Mumbai, and Kalyan Dombivli. Dighe was able to take the Lok Sabhas constituency of Thane away from the BJP and even had a hand in giving tickets to less experienced candidates who ultimately became successful MPs. Many people admired him and saw him as the next potential National Shivsena Pramukh after Balasaheb Thackeray. Learn more about the fascinating political career of Anand Dighe in this article. Anand Dighe was a prominent figure in Maharashtra, known for his contributions to the Hindu community and his success in the business world. He gained attention in the 1980s for starting cultural events like Dahi Handi at Tembi Naka and the Malang Gad Andolan, both of which captured national news coverage. Recognized for his dedication to Hinduism, Dighe earned the moniker Dharmaveer by his admirers. In addition to his cultural involvement, Dighe owned hotels and was involved in construction. He also had a close relationship with Raj Thackeray, with whom he may have owned businesses. Read on to learn more about Anand Dighes legacy. Anand Dighe may have passed away 20 years ago, but his legacy continues to live on in Mumbai, Thane, Palghar, Navi Mumbai, and Kalyan Dombivli. Known by many names, including Guruvarya and Dharmaveer, he was a revered figure and beloved by many. Even today, schools, colleges, roads, bridges, and malls are named after him, and his influence can be seen in the many students he mentored, who went on to become MP, MLA, and ministers. In this blog, we will delve into the life and legacy of Anand Dighe, and explore the impact he had on the people and communities he touched.</p>
+            <p>Dighe remained an ardent follower of Chhatrapati Shivaji Maharaj and these ideologies throughout his
+                life. In the 1970s, Anand Dighe started working for Shivsena at the age of just 18. Despite his young
+                age, he worked tirelessly for the welfare of the people, which quickly caught the attention of Sena
+                leaders. Known for his discipline and prime time management skills, Anand was involved in many of the
+                partys Andolan and fought for Marathi manus. He steadily rose through the ranks and eventually became
+                the district chief, a position he held for over two decades. Despite his significant contributions,
+                Anand was never one to take credit or give speeches. This article will delve deeper into the life and
+                legacy of Anand Dighe - a true pioneer in the building of the Shivsena-BJP alliance. Anand Dighe was a
+                renowned figure in Thane, known for his problem-solving skills and dedication to helping people. He
+                gained fame through his ability to solve issues on the spot and create satisfaction among those he
+                assisted. His efforts were especially impactful for the Marathi community, as he helped many young
+                people access education and employment opportunities. Additionally, he was a proponent of Marathi
+                language and literature, organizing festivals and supporting related cultural events. With his strong
+                stance on Hinduism and increasing renown, he has been compared to political figures such as the late Bal
+                Thackeray and referred to as the Shivsenapramukh of Thane district. Anand Dighe was a powerful political
+                figure who made a name for himself in the Thane area of India. Despite not holding any official
+                political posts, Dighe had a reputation that extended far beyond his local constituency. His charismatic
+                personality helped him build a strong grassroots base for the Shivsena party in Thane, Palghar, Navi
+                Mumbai, and Kalyan Dombivli. Dighe was able to take the Lok Sabhas constituency of Thane away from the
+                BJP and even had a hand in giving tickets to less experienced candidates who ultimately became
+                successful MPs. Many people admired him and saw him as the next potential National Shivsena Pramukh
+                after Balasaheb Thackeray. Learn more about the fascinating political career of Anand Dighe in this
+                article. Anand Dighe was a prominent figure in Maharashtra, known for his contributions to the Hindu
+                community and his success in the business world. He gained attention in the 1980s for starting cultural
+                events like Dahi Handi at Tembi Naka and the Malang Gad Andolan, both of which captured national news
+                coverage. Recognized for his dedication to Hinduism, Dighe earned the moniker Dharmaveer by his
+                admirers. In addition to his cultural involvement, Dighe owned hotels and was involved in construction.
+                He also had a close relationship with Raj Thackeray, with whom he may have owned businesses. Read on to
+                learn more about Anand Dighes legacy. Anand Dighe may have passed away 20 years ago, but his legacy
+                continues to live on in Mumbai, Thane, Palghar, Navi Mumbai, and Kalyan Dombivli. Known by many names,
+                including Guruvarya and Dharmaveer, he was a revered figure and beloved by many. Even today, schools,
+                colleges, roads, bridges, and malls are named after him, and his influence can be seen in the many
+                students he mentored, who went on to become MP, MLA, and ministers. In this blog, we will delve into the
+                life and legacy of Anand Dighe, and explore the impact he had on the people and communities he touched.
+            </p>
         </div>
     </section>
     <br>
@@ -72,12 +115,12 @@
                     <h3>Media Resource</h3>
                     <li><a class="column-text" href="">Press Releases</a></li>
                     <li><a class="column-text" href="">Photo Gallery</a></li>
-                    <li><a class="column-text"href="">Video Gallery</a></li>
-                </div> 
+                    <li><a class="column-text" href="">Video Gallery</a></li>
+                </div>
 
                 <div class="column">
                     <h3>Documents</h3>
-                    <li><a class="column-text" href="">Constitution</a></li>
+                    <li><a class="column-text" href="constitution.html">Constitution</a></li>
                 </div>
 
             </div>
