--- a/constitution.html
+++ b/constitution.html
@@ -28,6 +28,7 @@
 
     <section>
         <div class="Constitution">
+            <h1 style="margin: 10px;">Constitution</h1>
             <a target="_blank" href="constitution/constitution.pdf">
             <img src="constitution/constitution.jpg" alt="">
             </a>
