--- a/eknathshinde.html
+++ b/eknathshinde.html
@@ -1,144 +1,187 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shivsena</title>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
+    <link rel="stylesheet" href="Css/slide.css">
     <link rel="stylesheet" href="Css/story.css">
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="nav-logo-img">
-            <img src="image/shivShenaLogo.png" alt="logo">
-        </a>
-        <a class="shivsena-text">शिवसेना India</a>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a href="#Our">Our M.Ps</a>
-            <a href="#Media">Media</a>
-            <a href="contact.html">Contact us</a>
-        </div>
-        <div class="nav-button">
-            <span><a href="form.html">Join Shivsena</a></span>
-        </div>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a href="index.html" class="navbar-brand">
+                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+                <span class="shivsena-text">शिवसेना India</span>
+            </a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="media.html">Media</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact us</a>
+                    </li>
+                    <div class="nav-item">
+                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                    </div>
+                    <div class="nav-item">
+                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                    </div>
+                </ul>
+            </div>
     </nav>
     <!-- Navbar End -->
 
-    <br>
-    <section>
-        <div class="story-container">
-            <div class="story">
-                <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
-                <div class="three">
-                    <h1>Eknath Shinde Ji</h1>
-                </div>
-            </div>
-            <p class="image-p">Eknath Shinde is the man credited with altering the political landscape in Maharashtra.
-                Shinde ji has been a meteoric rise - from humble beginnings to being in charge of one of the most
-                significant states of India. Eknath Shinde Ji is an Indian politician and the current Minister of State
-                for Home Affairs in the Government of India. Shinde Ji is a member of the Shiv Sena, a right-wing Hindu
-                nationalist party based in the state of Maharashtra. The 58-year-old was elected to the Maharashtra
-                Assembly for four consecutive terms in 2004, 2009, 2014, and 2019, and has been in charge of planning
-                major Shiv Sena gatherings. Following his victory in 2014, Shinde, the most popular leader was chosen to
-                represent the Shiv Sena legislative party. He later served as the Leader of Opposition in the
-                Maharashtra Assembly for a short time. In the Sena-BJP government, he was appointed PWD minister. On
-                30th June 2022, Eknath Shinde was sworn in as the 20th Chief Minister of Maharashtra. Shinde ji was
-                introduced to politics by then Thane Shiv Sena President Anand Dighe in early 1980 and became successor
-                to the latters legacy after his death in 2001. He rose through the ranks after launching a labour union
-                for the party. His position in the Shiv Sena became stronger after Bal Thackerays nephew Raj left the
-                party and launched Maharashtra Navnirman Sena.</p>
-            <img src="image/eknathNew2.jpg" id="titlebox" alt="">
-            <h1>Humble Beginnings</h1>
-            <p>
-                Eknath Shinde is a Maratha who was born in the Jawali taluka of Satara, Maharashtra in 9 February 1964.
-                His family relocated to Thane, on Mumbais outskirts, in order to make a living. Eknath attended Mangala
-                High School & Junior College in Thane until the 11th grade. After completing his education, Shinde Ji
-                began working in the accounts department of the Municipal Corporation of Greater Mumbai. He later joined
-                the Shiv Sena, a party founded by his uncle Bal Thackeray, and quickly rose through the ranks to become
-                one of its senior leaders.
-            </p>
-            <h1>Eknath Shinde Birth, Education, and Family</h1>
-            <p>Shinde ji married Lata, a strong and intelligent woman who has stood by him through thick and thin. They
-                had 3 children, a son named Shrikant, another son named Deepesh, and a daughter named Shubhada. In a
-                tragic accident in 2000, while they were on a holiday, the Shinde family lost the younger children
-                Deepesh and Shubhada when they drowned in a lake as their boat capsized. Their surviving son Shrikant is
-                an Orthopaedic Surgeon and an elected Lok Sabha member from the Kalyan constituency since 2014. Shrikant
-                married Vrushali in 2016 and they have one child Rudransh.</p>
-            <h1>Eknath Shinde ji Political Career</h1>
-            <p>His first key political position was as a corporate of Thane Municipal Corporation in 1997. 2004 he was
-                first elected to the Maharashtra Legislative Assembly and appointed the Shiv Sena Thane Head in 2005. He
-                continued his position as an MLA for 4 consecutive terms, serving as Minister of Public Works, Minister
-                of Public Health and Family Welfare, Minister of Urban Development and Public Works, and Minister of
-                Home Affairs. Eknath Shinde is a true Shiv Sainik who was distraught by the unnatural political alliance
-                that Shiv Sena sought in Maharashtra. Shinde successfully re-established an alliance with BJP and was
-                sworn in as the 20th Chief Minister, with Bharatiya Janata Partys Devendra Fadnavis as the Deputy Chief
-                Minister. In 2022, he was one of the most searched politicians on Google. He was awarded the Lokmat
-                Maharashtrian of the Year award in 2022 to commemorate and salute his phenomenal work over the years.
-                His journey has been a testament to the excellent impact that he has had in promoting Maharashtra on a
-                national and global scale.</p>
-            <h1>Public Service</h1>
-            <p>Since his youth days, Shinde was inspired by the ideology of Balasaheb Thackeray. He entered politics in
-                the 1980s when he joined Shiv Sena as a Sainik, introduced by Anand Dighe, his mentor and a senior
-                leader in the party. Shinde, under Dighes leadership, emerged as a street-smart leader and problem
-                solver. He participated in various agitations, including the Maharashtra-Karnataka border agitation when
-                he was arrested and imprisoned for 40 days. His rise surprised many because of his enthusiasm,
-                dedication, and preparedness to convert a crisis into an opportunity. Dighe was impressed by Shindes
-                work and brought him into electoral politics by giving him a party ticket in 1997.
-
-            </p>
+  <br>
+  <section>
+    <div class="story-container">
+      <div class="story">
+        <!-- <h1 class="title" id="titlebox">Balasaheb Thackeray</h1> -->
+        <div class="three">
+          <h1>Eknath Shinde Ji</h1>
         </div>
-    </section>
-    <br>
-    <!-- Footer  -->
-    <footer>
-        <div class="footer-container">
-            <div class="footerimg">
-                <img src="image/shivShenaLogo.png" alt="">
-            </div>
-            <div class="row">
-                <div class="column">
-                    <h3>The Party</h3>
-                    <li><a class="column-text" href="">Histoey of Shivshena</a></li>
-                    <li><a class="column-text" href="">Our Ideology</a></li>
-                    <li><a class="column-text" href="">Our Ministers in Maharashtra Government</a></li>
-                </div>
+      </div>
+      <p class="image-p">Eknath Shinde is the man credited with altering the political landscape in Maharashtra.
+        Shinde ji has been a meteoric rise - from humble beginnings to being in charge of one of the most
+        significant states of India. Eknath Shinde Ji is an Indian politician and the current Minister of State
+        for Home Affairs in the Government of India. Shinde Ji is a member of the Shiv Sena, a right-wing Hindu
+        nationalist party based in the state of Maharashtra. The 58-year-old was elected to the Maharashtra
+        Assembly for four consecutive terms in 2004, 2009, 2014, and 2019, and has been in charge of planning
+        major Shiv Sena gatherings. Following his victory in 2014, Shinde, the most popular leader was chosen to
+        represent the Shiv Sena legislative party. He later served as the Leader of Opposition in the
+        Maharashtra Assembly for a short time. In the Sena-BJP government, he was appointed PWD minister. On
+        30th June 2022, Eknath Shinde was sworn in as the 20th Chief Minister of Maharashtra. Shinde ji was
+        introduced to politics by then Thane Shiv Sena President Anand Dighe in early 1980 and became successor
+        to the latters legacy after his death in 2001. He rose through the ranks after launching a labour union
+        for the party. His position in the Shiv Sena became stronger after Bal Thackerays nephew Raj left the
+        party and launched Maharashtra Navnirman Sena.</p>
+      <img src="image/eknathNew2.jpg" id="titlebox" alt="">
+      <h1>Humble Beginnings</h1>
+      <p>
+        Eknath Shinde is a Maratha who was born in the Jawali taluka of Satara, Maharashtra in 9 February 1964.
+        His family relocated to Thane, on Mumbais outskirts, in order to make a living. Eknath attended Mangala
+        High School & Junior College in Thane until the 11th grade. After completing his education, Shinde Ji
+        began working in the accounts department of the Municipal Corporation of Greater Mumbai. He later joined
+        the Shiv Sena, a party founded by his uncle Bal Thackeray, and quickly rose through the ranks to become
+        one of its senior leaders.
+      </p>
+      <h1>Eknath Shinde Birth, Education, and Family</h1>
+      <p>Shinde ji married Lata, a strong and intelligent woman who has stood by him through thick and thin. They
+        had 3 children, a son named Shrikant, another son named Deepesh, and a daughter named Shubhada. In a
+        tragic accident in 2000, while they were on a holiday, the Shinde family lost the younger children
+        Deepesh and Shubhada when they drowned in a lake as their boat capsized. Their surviving son Shrikant is
+        an Orthopaedic Surgeon and an elected Lok Sabha member from the Kalyan constituency since 2014. Shrikant
+        married Vrushali in 2016 and they have one child Rudransh.</p>
+      <h1>Eknath Shinde ji Political Career</h1>
+      <p>His first key political position was as a corporate of Thane Municipal Corporation in 1997. 2004 he was
+        first elected to the Maharashtra Legislative Assembly and appointed the Shiv Sena Thane Head in 2005. He
+        continued his position as an MLA for 4 consecutive terms, serving as Minister of Public Works, Minister
+        of Public Health and Family Welfare, Minister of Urban Development and Public Works, and Minister of
+        Home Affairs. Eknath Shinde is a true Shiv Sainik who was distraught by the unnatural political alliance
+        that Shiv Sena sought in Maharashtra. Shinde successfully re-established an alliance with BJP and was
+        sworn in as the 20th Chief Minister, with Bharatiya Janata Partys Devendra Fadnavis as the Deputy Chief
+        Minister. In 2022, he was one of the most searched politicians on Google. He was awarded the Lokmat
+        Maharashtrian of the Year award in 2022 to commemorate and salute his phenomenal work over the years.
+        His journey has been a testament to the excellent impact that he has had in promoting Maharashtra on a
+        national and global scale.</p>
+      <h1>Public Service</h1>
+      <p>Since his youth days, Shinde was inspired by the ideology of Balasaheb Thackeray. He entered politics in
+        the 1980s when he joined Shiv Sena as a Sainik, introduced by Anand Dighe, his mentor and a senior
+        leader in the party. Shinde, under Dighes leadership, emerged as a street-smart leader and problem
+        solver. He participated in various agitations, including the Maharashtra-Karnataka border agitation when
+        he was arrested and imprisoned for 40 days. His rise surprised many because of his enthusiasm,
+        dedication, and preparedness to convert a crisis into an opportunity. Dighe was impressed by Shindes
+        work and brought him into electoral politics by giving him a party ticket in 1997.
 
-                <div class="column">
-                    <h3>Leadership</h3>
-                    <li><a class="column-text" href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
-                    <li><a class="column-text" href="ananddighe.html">Anand Dighe Ji</a></li>
-                    <li><a class="column-text" href="eknathshinde.html">Eknath Shinde Ji</a></li>
-                    <li><a class="column-text" href="rahulshewale.html">Rahul Shewale Ji</a></li>
-                    <li><a class="column-text" href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
-                    <li><a class="column-text" href="drshrikant.html">Shrikant Shinde Ji</a></li>
-                    <li><a class="column-text" href="abhijit.html">Abhijit Adsul Ji</a></li>
-                    <li><a class="column-text" href="anshuman.html">Anshuman Joshi Ji</a></li>
-
-                </div>
-
-                <div class="column">
-                    <h3>Media Resource</h3>
-                    <li><a class="column-text" href="">Press Releases</a></li>
-                    <li><a class="column-text" href="">Photo Gallery</a></li>
-                    <li><a class="column-text" href="">Video Gallery</a></li>
-                </div>
-
-                <div class="column">
-                    <h3>Documents</h3>
-                    <li><a class="column-text" href="constitution.html">Constitution</a></li>
-                </div>
-
-            </div>
+      </p>
+    </div>
+  </section>
+  <br>
+  <!-- Footer -->
+  <footer class="text-white py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <h3>The Party</h3>
+          <ul class="list-unstyled">
+            <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
+            <li><a href="">Our Ideology</a></li>
+            <li><a href="">Our Ministers in Maharashtra Government</a></li>
+          </ul>
         </div>
+        <div class="col-md-3 col-sm-6">
+          <h3>Leadership</h3>
+          <ul class="list-unstyled">
+            <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
+            <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
+            <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
+            <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
+            <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+            <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
+            <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
+            <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <h3>Media Resource</h3>
+          <ul class="list-unstyled">
+            <li><a href="">Press Releases</a></li>
+            <li><a href="">Photo Gallery</a></li>
+            <li><a href="">Video Gallery</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <h3>Documents</h3>
+          <ul class="list-unstyled">
+            <li><a href="constitution.html">Constitution</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="text-center">
+            <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
+          </div>
+          <div class="copy-text text-center mt-3">
+            <p>Shivsena India | &#169; 2023</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
+  <!-- Footer End -->
 
-    </footer>
-    <!-- Footer End -->
-
-
+  <!-- Bootstrap JS -->
+  <script src="JavaScript/slide.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
